remove star from author names

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -42,9 +42,9 @@
     <hr style="border: none; border-top: 1px solid #ccc; margin-bottom: 20px;">
 
     <h4>Papers</h4>
-    <p style="font-size: 1.1em; text-align: center;"><i style="color: #d62828;">* (star) indicates first or lead PhD author. </i></p>
+    {{/*<p style="font-size: 1.1em; text-align: center;"><i style="color: #d62828;">* (star) indicates first or lead PhD author. </i></p>*/}}
     <p style="font-size: 0.9em; text-align: center;">For transparency, all co-first authors, or authors with higher orders will be displayed</p>
-    <p style="font-size: 0.9em; text-align: center;">IF indicates 5-year/latest impact factor for medical journals</p>
+    {{/*<p style="font-size: 0.9em; text-align: center;">IF indicates 5-year/latest impact factor for medical journals</p>*/}}
     <p>&nbsp;</p>
 
 
