--- a/layouts/index.html
+++ b/layouts/index.html
@@ -212,7 +212,7 @@
 
   <div class="row publications awards experience">
     <hr style="border: none; border-top: 1px solid #ccc; margin-bottom: 20px;">
-    <h4>Teaching Experience and Research Mentorship</h4>
+    <h4>Teaching, Mentorship, and Service</h4>
 
     <ul>
       {{range  $index, $item := $experience}}
