--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,6 +7,7 @@
 {{ $service := site.Data.cy.service }}
 {{ $talks := site.Data.cy.talks }}
 {{ $skills := site.Data.cy.skills }}
+{{ $Fact := site.Data.cy.fact }}
 {{ $references := site.Data.cy.references }}
 
 
@@ -239,7 +240,16 @@
     {{end}}
   </div>
   */}}
+  
+<div class="row publications fact">
+    <hr style="border: none; border-top: 1px solid #ccc; margin-bottom: 20px;">
+    <h4>Talks</h4>
 
+    {{with $fact}}
+    <div class="fact-desc">{{ . | markdownify  | emojify }}</div>
+    {{end}}
+  </div>
+  
   <div class="row publications talks">
     <hr style="border: none; border-top: 1px solid #ccc; margin-bottom: 20px;">
     <h4>Talks</h4>
