--- a/layouts/index.html
+++ b/layouts/index.html
@@ -243,7 +243,7 @@
   
 <div class="row publications fact">
     <hr style="border: none; border-top: 1px solid #ccc; margin-bottom: 20px;">
-    <h4>Talks</h4>
+    <h4>Facts</h4>
 
     {{with $fact}}
     <div class="fact-desc">{{ . | markdownify  | emojify }}</div>
