--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
 {{ $service := site.Data.cy.service }}
 {{ $talks := site.Data.cy.talks }}
 {{ $skills := site.Data.cy.skills }}
-{{ $Fact := site.Data.cy.fact }}
+{{ $fact := site.Data.cy.fact }}
 {{ $references := site.Data.cy.references }}
 
 
