--- a/layouts/index.html
+++ b/layouts/index.html
@@ -211,7 +211,7 @@
 
   <div class="row publications awards experience">
     <hr style="border: none; border-top: 1px solid #ccc; margin-bottom: 20px;">
-    <h4>Teaching, Mentorship, and Service</h4>
+    <h4>Teaching Experience</h4>
 
     <ul>
       {{range  $index, $item := $experience}}
@@ -225,8 +225,6 @@
       </li>
       {{end}}
     </ul>
-
-
   </div>
 
 
