--- a/layouts/index.html
+++ b/layouts/index.html
@@ -249,7 +249,7 @@
     {{end}}
   </div>
 
-<div class="row publications fact">
+{{/*<div class="row publications fact">
     <hr style="border: none; border-top: 1px solid #ccc; margin-bottom: 20px;">
     <h4>Facts</h4>
 
@@ -257,7 +257,7 @@
     <div class="fact-desc">{{ . | markdownify  | emojify }}</div>
     {{end}}
   </div>
-
+  }}
 
 
   <div class="row publications references">
