--- a/layouts/index.html
+++ b/layouts/index.html
@@ -249,7 +249,8 @@
     {{end}}
   </div>
 
-{{/*<div class="row publications fact">
+{{/*
+  <div class="row publications fact">
     <hr style="border: none; border-top: 1px solid #ccc; margin-bottom: 20px;">
     <h4>Facts</h4>
 
