--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,7 +14,7 @@
 
 <div class="container">
   <div class="row profile">
-    <img src='{{"images/avatar.jpg" | relURL }}' alt="{{$about.name}}">
+    <img src='{{"images/avatar.png" | relURL }}' alt="{{$about.name}}">
     <div class="profile-text">
       <h1 style="font-size: 3em; margin-bottom: 0; border-bottom: none; color: #3498DB;">{{$about.name}}</h1>
       <h5> {{$about.role}}
